tests/positive/MiniC/ExportNameArgs/Input.juvix
module Input;

open import Stdlib.Prelude;

fun : Nat → Nat;
fun _ := three;

end;
